Fixed game card translations, fixed off-centered projects flexbox

--- a/personal-website/src/app/projects/projects-page/projects-page.component.css
+++ b/personal-website/src/app/projects/projects-page/projects-page.component.css
@@ -11,5 +11,9 @@
     .projectsContainer
     {
         width: 100% !important;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
 }
